<resources>
    <string name="app_name">DonationTracker</string>
    <string name="companyname">CS+Social Good</string>
    <string name="location">Location</string>
    <string name="lockuser">Lock User</string>
    <string name="adduser">Add User</string>
    <string name="updatelocation">Update Location</string>
    <string name="managelocation">Manage Location</string>
    <string name="logout">Logout</string>
    <string name="title_activity_loc_emp_register">LocEmpRegister</string>
    <string name="title_activity_maps">Map</string>
    <string name="search_menu_thing">Search</string>
    <string name="home_from_search">Home</string>
    <string name="search_by_cat">Item Category Search</string>
    <string name="search_reg">Item Search</string>
</resources>
