<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single"></group>

    <item
        android:id="@+id/nav_camera"
        android:icon="@drawable/location"
        android:title="@string/location" />

    <item
        android:id="@+id/search_menu"
        android:icon="@drawable/search_icon"
        android:title="@string/search_menu_thing" />

    <item
        android:id="@+id/map_menu"
        android:icon="@drawable/map_thing"
        android:title="@string/title_activity_maps" />

    <item
        android:id="@+id/nav_camera1"
        android:icon="@drawable/updatelocation"
        android:title="@string/updatelocation" />

    <item
        android:id="@+id/nav_camera4"
        android:icon="@drawable/logout_icon"
        android:title="@string/logout" />

</menu>